--- a/9. Calculator/styles.css
+++ b/9. Calculator/styles.css
@@ -1,3 +1,11 @@
+body{
+    margin: 0;
+    display: flex;
+    justify-content: center;/* aliniere orizontala */
+    align-items: center;/* aliniere verticala */
+    height: 100vh;
+    background-color: hsl(0, 0%, 95%);
+}
 #calculator{
     font-family: Arial, sans-serif;
     background-color: hsl(0, 0%, 15%);
@@ -8,9 +16,12 @@
 #display{
     width: 100%;
     padding: 20px;
-    font-size: 50rem;
+    color: white;
+    font-size: 5rem;
     text-align: left;
     border: none;
+    background-color: hsl(0, 0%, 20%);
+  
 }
 #keys{
     display: grid;
@@ -28,4 +39,19 @@ button{
     color: white;
     font-weight: bold;
     cursor: pointer;
+}
+button:hover{
+     background-color: hsl(0, 0%, 40%);
+}
+button:active{
+     background-color: hsl(0, 0%, 50%);
+}
+.operator-btn{
+   background-color: hsl(35, 100%, 55%)
+}
+.operator-btn:hover{
+   background-color: hsl(35, 100%, 65%)
+}
+.operator-btn:active{
+   background-color: hsl(35, 100%, 75%)
 }
