--- a/11. CSS Grid/grid.css
+++ b/11. CSS Grid/grid.css
@@ -3,7 +3,11 @@
   display: grid;
 
   /* latimea fiecarei coloane  */
-  /* grid-template-columns: 300px 300px 300px;  */
+  /* grid-template-colum ns: 300px 300px 300px;  */
+
+  grid-template-columns: repeat(4, 300px);
+  /* Se pot dimensiona si randurile, dar apar anomalii */
+  /* grid-template-rows:repeat(3,300px); */
 
   /* folosirea functiei repeat 1fr- 1 fraction, se umple intreaga pagina, transmite instructiunea ca fiecare element sa ocupe tot spatiu alocat*/
   /* grid-template-columns: repeat(5, 1fr);  */
@@ -13,9 +17,9 @@
   /* grid-template-columns: repeat(auto-fit, 300px); */
 
 /* calculare dinamica a fiecarui element */
-  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(300px,1fr)); */
 
-  /* auto-fill va aloca si spatiul nefolosit, in carduri egadle de cate 300 px */
+  /* auto-fill va aloca/umplesi spatiul nefolosit, in carduri egale de cate 300 px */
 /* grid-template-columns: repeat(auto-fill, 300px); */
 
 
@@ -40,5 +44,25 @@ img {
   float: left;
   margin: 10px;
 }
-
-/* min 30:31 */
+.article1{
+  /* article 1 vrem sa mearga de la row 1 pana la row 3=spatiile dintre celule */
+  /* grid-row-start: 1;
+  grid-row-end: 3;   */
+  /* Se poate inlocui cu : */
+  grid-row: 1/3;
+}
+.article2{
+  /* article 2 vrem sa mearga de la coloana 2 pana la coloana 3*/
+  /* grid-column-start: 2;
+  grid-column-end: 4;   */
+  /* Se poate inlocui cu : */
+  grid-column:2/4;
+  grid-row:1/3;
+}
+.article5{
+  /* grid-column-start: 1;
+  grid-column-end: 4;   */
+  /* Se poate inlocui cu : */
+  grid-column:1/4;
+}
+/* min 49:30 */
