--- a/11. CSS Grid/grid.css
+++ b/11. CSS Grid/grid.css
@@ -22,7 +22,10 @@
   /* auto-fill va aloca/umplesi spatiul nefolosit, in carduri egale de cate 300 px */
 /* grid-template-columns: repeat(auto-fill, 300px); */
 
-
+grid-template-areas:
+"article1 article2 article2 article3"
+"article1 article2 article2 article4"
+"article5 article5 article5 article5";
   /* grid-template-rows: 200px 200px 400px; inaltimea fiecarui rand */
   margin: 0 auto;
   font-family: "Roboto", sans-serif;
@@ -44,26 +47,41 @@ img {
   float: left;
   margin: 10px;
 }
-.article1{
+/* .article1{
   /* article 1 vrem sa mearga de la row 1 pana la row 3=spatiile dintre celule */
   /* grid-row-start: 1;
   grid-row-end: 3;   */
   /* Se poate inlocui cu : */
-  grid-row: 1/3;
-}
-.article2{
+  /* grid-row: 1/3; */
+/* } */ */
+/* .article2{
   /* article 2 vrem sa mearga de la coloana 2 pana la coloana 3*/
   /* grid-column-start: 2;
   grid-column-end: 4;   */
   /* Se poate inlocui cu : */
-  grid-column:2/4;
-  grid-row:1/3;
-}
-.article5{
+  /* grid-column:2/4;
+  grid-row:1/3; */
+/* } */ */
+/* .article5{
   /* grid-column-start: 1;
   grid-column-end: 4;   */
   /* Se poate inlocui cu : */
-  grid-column:1/4;
+  /* grid-column:1/4;
+} */ */
+/* min 49:30
+https://youtu.be/uLi0MtouWMs?list=FLRtI4WCdoYSAEG859jhqFAg */
+.article1{
+  grid-area:article1;
 }
-/* min 49:30 */
-/* https://youtu.be/uLi0MtouWMs?list=FLRtI4WCdoYSAEG859jhqFAg */
+.article2{
+  grid-area:article2;
+}
+.article3{
+  grid-area:article3;
+}
+.article4{
+  grid-area:article4;
+}
+.article5{
+  grid-area:article5;
+}
